fix link tapping ability on mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -107,6 +107,10 @@ body {
           width: 100%;
           float: left;
         }
+        a {
+          display: inline-block;
+          width: 100%;
+        }
         ul {
           li {
             display: block;
